--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "data-fns": "^1.1.0",
     "date-fns": "^2.30.0",
     "google-auth-library": "^9.14.2",
     "jsonwebtoken": "^9.0.2",
@@ -35,6 +36,7 @@
     "tailwind-merge": "^2.0.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.2",
     "zod": "^3.22.4",
     "zustand": "^4.4.6"
   },
