--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "postbuild": "mkdir -p data/chats data/users",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
